WIP: Try asserting on weights and fees

--- a/pallets/creditcoin/Cargo.toml
+++ b/pallets/creditcoin/Cargo.toml
@@ -120,6 +120,9 @@ git = 'https://github.com/paritytech/substrate.git'
 rev = '94dfe152e61e42cd27844a65165cfdedde5232eb'
 version = '4.1.0-dev'
 
+[dev-dependencies.more-asserts]
+version = '0.2.2'
+
 [features]
 default = ['std']
 runtime-benchmarks = ['frame-benchmarking']
